force-app/main/default/objects/Campaign/fields/Actual_Host_Client_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Actual_Host_Client_Ratio__c</fullName>
    <description>Case#1168 - 11/2011 - Rudolf Niehaus
            The actual number of host(s) to the number of client(s) at a campaign</description>
    <label>Actual Host Client Ratio</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1:1</fullName>
            </value>
            <value>
                <fullName>1:2</fullName>
            </value>
            <value>
                <fullName>1:3</fullName>
            </value>
            <value>
                <fullName>1:4</fullName>
            </value>
            <value>
                <fullName>1:4+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>