force-app/main/default/objects/Campaign/fields/Agenda_URL__c.field-meta.xml
<CustomField>
    <fullName>Agenda_URL__c</fullName>
    <description>SGPRT-4183: URL for the Campaign&apos;s Event Agenda</description>
    <inlineHelpText>Highlights of the meeting</inlineHelpText>
    <label>Agenda URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>