force-app/main/default/objects/Campaign/fields/Aide_Memoire_Sent__c.field-meta.xml
<CustomField>
    <fullName>Aide_Memoire_Sent__c</fullName>
    <description>Case#1168 - 11/2011 - Rudolf Niehaus
            The date the aide memoire is sent</description>
    <label>Aide Memoire Sent</label>
    <type>Date</type>
</CustomField>