force-app/main/default/objects/Campaign/fields/Bank__c.field-meta.xml
<CustomField>
    <fullName>Bank__c</fullName>
    <label>Bank</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard Bank</fullName>
            </value>
            <value>
                <fullName>Standard Bank also trading as Stanbic</fullName>
            </value>
            <value>
                <fullName>Stanbic Bank</fullName>
            </value>
            <value>
                <fullName>Standard Lesotho Bank Limited</fullName>
            </value>
            <value>
                <fullName>Stanbic IBTC Bank Plc</fullName>
            </value>
            <value>
                <fullName>Standard Bank of South Africa Limited</fullName>
            </value>
            <value>
                <fullName>Stanbic Bank Limited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>