force-app/main/default/objects/Campaign/fields/Campaign_Category__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Category__c</fullName>
    <description>Case#1168 - 11/2011 - Rudolf Niehaus
            The campaign category that defines the campaign</description>
    <label>Campaign Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>1 - Bespoke</fullName>
            </value>
            <value>
                <fullName>2 - Value Add</fullName>
            </value>
            <value>
                <fullName>3 - Brought to you by CIB</fullName>
            </value>
            <value>
                <fullName>4 - Group Event</fullName>
            </value>
            <value>
                <fullName>5 - Of Interest</fullName>
            </value>
            <value>
                <fullName>6 - Sponsorship</fullName>
            </value>
            <value>
                <fullName>7 - PA Event</fullName>
            </value>
            <value>
                <fullName>Survey</fullName>
            </value>
            <value>
                <fullName>Operational Mailer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>