force-app/main/default/objects/Campaign/fields/Campaign_Category_Type__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Category_Type__c</fullName>
    <description>Case#1168 - 11/2011 - Rudolf Niehaus
            The specific type of campaign that is applied depending on campaign that is selected</description>
    <label>Campaign Category Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Campaign_Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Breakfast</fullName>
            </value>
            <value>
                <fullName>Lunch</fullName>
            </value>
            <value>
                <fullName>Dinner</fullName>
            </value>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>Seminar</fullName>
            </value>
            <value>
                <fullName>Presentation</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
            <value>
                <fullName>Signature Event</fullName>
            </value>
            <value>
                <fullName>Flagship Event</fullName>
            </value>
            <value>
                <fullName>Generic</fullName>
            </value>
            <value>
                <fullName>Golf</fullName>
            </value>
            <value>
                <fullName>Champagne Glasses</fullName>
            </value>
            <value>
                <fullName>Cocktail</fullName>
            </value>
            <value>
                <fullName>Formal Dinner</fullName>
            </value>
            <value>
                <fullName>Prize giving event</fullName>
            </value>
            <value>
                <fullName>Standard bank building</fullName>
            </value>
            <value>
                <fullName>African Earth</fullName>
            </value>
            <value>
                <fullName>African Elephant</fullName>
            </value>
            <value>
                <fullName>Digital Conference</fullName>
            </value>
            <value>
                <fullName>Coffee</fullName>
            </value>
            <value>
                <fullName>Important Information</fullName>
            </value>
            <value>
                <fullName>Notification</fullName>
            </value>
            <value>
                <fullName>Transactional Products &amp; Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>