force-app/main/default/objects/Campaign/fields/Campaign_Member_List_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Member_List_Close_Date__c</fullName>
    <description>Case#1168 - Rudolf Niehaus - 01/2012</description>
    <label>Campaign Member List Close Date</label>
    <type>Date</type>
</CustomField>