force-app/main/default/objects/Campaign/fields/Campaign_Members__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Members__c</fullName>
    <description>C-00002149: View all Campaign members/hosts does not work in lightning</description>
    <formula>HYPERLINK(IF( $User.UIThemeDisplayed=&quot;Theme4d&quot;,&quot;/lightning/r/Report/00O20000004zjxD/view?fv0=&quot;&amp;Name,&quot;/00O20000004zjxD?pv0=&quot;&amp;Name),&quot;View All Campaign Members&quot;,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Members</label>
    <type>Text</type>
</CustomField>