force-app/main/default/objects/Campaign/fields/Campaign_Objectives__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Objectives__c</fullName>
    <description>Case#1168 - 11/2011 - Rudolf Niehaus
            Objective of the Campaign</description>
    <inlineHelpText>The Objective(s) of the Campaign (32700 characters or less)</inlineHelpText>
    <label>Campaign Objective(s)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>