force-app/main/default/objects/Campaign/fields/Cancelled_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Reason__c</fullName>
    <description>Case#1168 - 11/2011 - Rudolf Niehaus
            The reason why Campaign was cancelled</description>
    <label>Status Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Brief Incomplete</fullName>
            </value>
            <value>
                <fullName>Budget Not Signed Off</fullName>
            </value>
            <value>
                <fullName>Date Undecided</fullName>
            </value>
            <value>
                <fullName>Insufficient Budget</fullName>
            </value>
            <value>
                <fullName>Key Speakers/Host Unavailable</fullName>
            </value>
            <value>
                <fullName>Lack of Client Interest</fullName>
            </value>
            <value>
                <fullName>Objective Unclear</fullName>
            </value>
            <value>
                <fullName>Timelines Not Met</fullName>
            </value>
            <value>
                <fullName>To Be Rescheduled</fullName>
            </value>
            <value>
                <fullName>Venue Unavailable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>