force-app/main/default/objects/Campaign/fields/Cost_Per_Head__c.field-meta.xml
<CustomField>
    <fullName>Cost_Per_Head__c</fullName>
    <description>Case#1168 - 11/2011 - Rudolf Niehaus
            The cost breakdown per head including Standard Bank contacts applicable for the campaign</description>
    <formula>ActualCost   /   IF( (Number_of_Bank_Contacts_Attended__c +  Number_of_Client_Contacts_Attended__c ) &gt; 0,(Number_of_Bank_Contacts_Attended__c  + Number_of_Client_Contacts_Attended__c ),1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Per Head</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>