force-app/main/default/objects/Campaign/fields/Date_Invitation_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Invitation_Sent__c</fullName>
    <description>Case#1168 - 11/2011 - Rudolf Niehaus
            The date the invitation was sent</description>
    <label>Invitation Sent</label>
    <type>Date</type>
</CustomField>