force-app/main/default/objects/Campaign/fields/Deploy_to_MC__c.field-meta.xml
<CustomField>
    <fullName>Deploy_to_MC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFP-5968 - A field to trigger the flow for MC integration email sends.</description>
    <inlineHelpText>Once a campaign has completed all necessary due diligence and emails are ready to be deployed, this button can then be activated.</inlineHelpText>
    <label>Deploy to Marketing Cloud</label>
    <type>Checkbox</type>
</CustomField>