force-app/main/default/objects/Campaign/fields/Email_Body__c.field-meta.xml
<CustomField>
    <fullName>Email_Body__c</fullName>
    <label>Email Body</label>
    <length>3999</length>
    <type>Html</type>
</CustomField>