force-app/main/default/objects/Campaign/fields/Email_Header_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Email_Header_Image_URL__c</fullName>
    <label>Email Header Image URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>