force-app/main/default/objects/Campaign/fields/Email_Signature__c.field-meta.xml
<CustomField>
    <fullName>Email_Signature__c</fullName>
    <description>SGPRT-4183</description>
    <label>Email Signature</label>
    <length>255</length>
    <type>Text</type>
</CustomField>