force-app/main/default/objects/Campaign/fields/Email_Signature_rt__c.field-meta.xml
<CustomField>
    <fullName>Email_Signature_rt__c</fullName>
    <description>SFP-8266 - Name of the user who signs off the email in richtext</description>
    <inlineHelpText>Email Signature</inlineHelpText>
    <label>Email Signature</label>
    <length>4000</length>
    <type>Html</type>
</CustomField>