force-app/main/default/objects/Campaign/fields/Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>Email_Subject__c</fullName>
    <label>Email Subject</label>
    <length>50</length>
    <type>Text</type>
</CustomField>