force-app/main/default/objects/Campaign/fields/Initiated_By__c.field-meta.xml
<CustomField>
    <fullName>Initiated_By__c</fullName>
    <description>Case#1168 - 11/2011 - Rudolf Niehaus
            The Business area who initiated the campaign</description>
    <label>Initiated By</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Client Coverage</fullName>
            </value>
            <value>
                <fullName>Conferences</fullName>
            </value>
            <value>
                <fullName>Exco</fullName>
            </value>
            <value>
                <fullName>Global Markets</fullName>
            </value>
            <value>
                <fullName>Group Enablers</fullName>
            </value>
            <value>
                <fullName>Group Research</fullName>
            </value>
            <value>
                <fullName>Group Sponsorship</fullName>
            </value>
            <value>
                <fullName>Investment Banking</fullName>
            </value>
            <value>
                <fullName>Property Group</fullName>
            </value>
            <value>
                <fullName>Transactional Products and Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>