force-app/main/default/objects/Campaign/fields/Invitation_Type__c.field-meta.xml
<CustomField>
    <fullName>Invitation_Type__c</fullName>
    <description>Case#1168 - 11/2011 - Rudolf Niehaus
            The type of invitation that will be sent</description>
    <label>Invitation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Family</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Single</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>