force-app/main/default/objects/Campaign/fields/Involved_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Involved_Business_Unit__c</fullName>
    <description>Case#1168 - 11/2011 - Rudolf Niehaus
            The Business Unit(s) who is/are hosting the Campaign</description>
    <label>Involved Business Unit</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bank Sector</fullName>
            </value>
            <value>
                <fullName>Business Acquisition</fullName>
            </value>
            <value>
                <fullName>Buy-Side</fullName>
            </value>
            <value>
                <fullName>Capital Markets</fullName>
            </value>
            <value>
                <fullName>Commodities</fullName>
            </value>
            <value>
                <fullName>Corporates</fullName>
            </value>
            <value>
                <fullName>Cross-Border Debt &amp; Financial Advisory</fullName>
            </value>
            <value>
                <fullName>Debt Capital Markets</fullName>
            </value>
            <value>
                <fullName>Debt Products</fullName>
            </value>
            <value>
                <fullName>Diversified Industrials</fullName>
            </value>
            <value>
                <fullName>Diversified Lending &amp; Leverage</fullName>
            </value>
            <value>
                <fullName>EB &amp; SI</fullName>
            </value>
            <value>
                <fullName>Equities</fullName>
            </value>
            <value>
                <fullName>Equity Capital Markets</fullName>
            </value>
            <value>
                <fullName>Financial Institutions</fullName>
            </value>
            <value>
                <fullName>Foreign Exchange</fullName>
            </value>
            <value>
                <fullName>Global Structuring Group</fullName>
            </value>
            <value>
                <fullName>Investment Banking</fullName>
            </value>
            <value>
                <fullName>International Development Group</fullName>
            </value>
            <value>
                <fullName>Investor Services</fullName>
            </value>
            <value>
                <fullName>Loan Syndication</fullName>
            </value>
            <value>
                <fullName>M &amp; A Advisory</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>Mining, Energy &amp; Infrastructure</fullName>
            </value>
            <value>
                <fullName>Money Markets</fullName>
            </value>
            <value>
                <fullName>New Business Development</fullName>
            </value>
            <value>
                <fullName>Non Banking Financial Institutions</fullName>
            </value>
            <value>
                <fullName>Non Performing Loans</fullName>
            </value>
            <value>
                <fullName>Oil &amp; Gas</fullName>
            </value>
            <value>
                <fullName>P &amp; I Advisory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>