force-app/main/default/objects/Campaign/fields/Involved_Division__c.field-meta.xml
<CustomField>
    <fullName>Involved_Division__c</fullName>
    <description>Case#1168 - 11/2011 - Rudolf Niehaus
            The Division(s) who is/are hosting the campaign</description>
    <label>Involved Division</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Client Coverage</fullName>
            </value>
            <value>
                <fullName>Exco</fullName>
            </value>
            <value>
                <fullName>Global Markets</fullName>
            </value>
            <value>
                <fullName>Investment Banking</fullName>
            </value>
            <value>
                <fullName>Property Group</fullName>
            </value>
            <value>
                <fullName>Transactional Products and Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>