force-app/main/default/objects/Campaign/fields/Involved_Global_Area__c.field-meta.xml
<CustomField>
    <fullName>Involved_Global_Area__c</fullName>
    <description>Case#1168 - 11/2011 - Rudolf Niehaus
            The Global Area who is/are hosting the campaign</description>
    <label>Involved Global Area</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CIBSA</fullName>
            </value>
            <value>
                <fullName>CIBOA</fullName>
            </value>
            <value>
                <fullName>CIBROA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>