force-app/main/default/objects/Campaign/fields/Location_City__c.field-meta.xml
<CustomField>
    <fullName>Location_City__c</fullName>
    <description>Case#1168 - 11/2011 - Rudolf Niehaus
            The city where the campaign is being held</description>
    <label>Location City</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accra</fullName>
            </value>
            <value>
                <fullName>Apapa</fullName>
            </value>
            <value>
                <fullName>Barcelona</fullName>
            </value>
            <value>
                <fullName>Beijing</fullName>
            </value>
            <value>
                <fullName>Boston</fullName>
            </value>
            <value>
                <fullName>Brussels</fullName>
            </value>
            <value>
                <fullName>Buenos Aires</fullName>
            </value>
            <value>
                <fullName>Cape Town</fullName>
            </value>
            <value>
                <fullName>Dar es Salaam</fullName>
            </value>
            <value>
                <fullName>Dubai</fullName>
            </value>
            <value>
                <fullName>Dublin</fullName>
            </value>
            <value>
                <fullName>Durban</fullName>
            </value>
            <value>
                <fullName>Frankfurt</fullName>
            </value>
            <value>
                <fullName>Garki</fullName>
            </value>
            <value>
                <fullName>Hong Kong</fullName>
            </value>
            <value>
                <fullName>Ibadan</fullName>
            </value>
            <value>
                <fullName>Ikeja</fullName>
            </value>
            <value>
                <fullName>Istanbul</fullName>
            </value>
            <value>
                <fullName>Johannesburg</fullName>
            </value>
            <value>
                <fullName>Kaduna City</fullName>
            </value>
            <value>
                <fullName>Kampala</fullName>
            </value>
            <value>
                <fullName>Kano City</fullName>
            </value>
            <value>
                <fullName>Kumasi</fullName>
            </value>
            <value>
                <fullName>Lagos</fullName>
            </value>
            <value>
                <fullName>Liverpool</fullName>
            </value>
            <value>
                <fullName>London</fullName>
            </value>
            <value>
                <fullName>Mombasa</fullName>
            </value>
            <value>
                <fullName>Nairobi</fullName>
            </value>
            <value>
                <fullName>New York</fullName>
            </value>
            <value>
                <fullName>Port Elizabeth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>