force-app/main/default/objects/Campaign/fields/Lock_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Lock_Campaign__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Case#1168 - 11/2011 - Rudolf Niehaus
            Lock the Campaign to prevent additional members from being added</description>
    <inlineHelpText>By locking the campaign users will not be able to add additional members or remove existing members</inlineHelpText>
    <label>Lock Campaign</label>
    <type>Checkbox</type>
</CustomField>