force-app/main/default/objects/Campaign/fields/Map_URL__c.field-meta.xml
<CustomField>
    <fullName>Map_URL__c</fullName>
    <label>Map URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>