force-app/main/default/objects/Campaign/fields/Number_of_Bank_Contacts_Declined__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Bank_Contacts_Declined__c</fullName>
    <description>Case#1168 - 11/2011 - Rudolf Niehaus
            Calculate field for the total number of contacts that have Invite Status = Declined and Contact record type = Bank Contact Record Type</description>
    <label>Number of Bank Contacts Declined</label>
    <summaryFilterItems>
        <field>CampaignMember.Status</field>
        <operation>equals</operation>
        <value>Declined</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>CampaignMember.Contact_Record_Type__c</field>
        <operation>equals</operation>
        <value>Bank Contact Record Type</value>
    </summaryFilterItems>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>