force-app/main/default/objects/Campaign/fields/Number_of_Client_Contacts_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Client_Contacts_Accepted__c</fullName>
    <description>Case#1168 - 11/2011 - Rudolf Niehaus
            Calculated field for the total number of contacts that have Invite Status = Accepted and Contact record type = Client Contact Record Type</description>
    <label>Number of Client Contacts Accepted</label>
    <summaryFilterItems>
        <field>CampaignMember.Status</field>
        <operation>equals</operation>
        <value>Accepted</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>CampaignMember.Contact_Record_Type__c</field>
        <operation>equals</operation>
        <value>Client Contact Record Type</value>
    </summaryFilterItems>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>