force-app/main/default/objects/Campaign/fields/Number_of_Client_Contacts_Attended__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Client_Contacts_Attended__c</fullName>
    <description>Case#1168 - 11/2011 - Rudolf Niehaus
            Calculate field for the total number of contacts that have Attendance Status = Attended and Walk In and Contact record type = Client Contact Record Type</description>
    <label>Number of Client Contacts Attended</label>
    <summaryFilterItems>
        <field>CampaignMember.Attendance_Status__c</field>
        <operation>equals</operation>
        <value>Attended, Walk In</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>CampaignMember.Contact_Record_Type__c</field>
        <operation>equals</operation>
        <value>Client Contact Record Type</value>
    </summaryFilterItems>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>