force-app/main/default/objects/Campaign/fields/Number_of_Hosts__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Hosts__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Case#6220 - Rudolf Niehaus
            This field holds the number of ALL the hosts linked to the member of a Campaign. As there could be multiple of the same host for different members the count do not reflect the duplicates.</description>
    <label>Number of Hosts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>